[gd_scene load_steps=17 format=3 uid="uid://cu7uksfrgsb50"]

[ext_resource type="PackedScene" uid="uid://c18muratispac" path="res://levels/level.tscn" id="1_oiwbr"]
[ext_resource type="Script" uid="uid://daq6yw5cju6ft" path="res://rap/rap_battle_manager.gd" id="2_jupdb"]
[ext_resource type="Script" uid="uid://bsimg0u2jyi3n" path="res://camera/camera_limits.gd" id="2_mjgf0"]
[ext_resource type="Texture2D" uid="uid://blvjem8k7qqb4" path="res://rap/backgroundfigh.jpg" id="5_jupdb"]
[ext_resource type="Texture2D" uid="uid://d0i0eh0grk83y" path="res://rap/rapbattletransutin-Sheet.png" id="6_fk1ld"]
[ext_resource type="Texture2D" uid="uid://dnbi21w70e60i" path="res://rap/rapscene-Sheet.png" id="7_lvyu4"]
[ext_resource type="AudioStream" uid="uid://ck1fp1tw6keod" path="res://rap/2025-08-18 05-12-08.mp3" id="9_fk1ld"]

[sub_resource type="Animation" id="Animation_ggmdm"]
resource_name = "Intro"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Stage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.52, 1.05, 1.46, 1.7, 2, 2.34, 2.71, 2.96, 3.31, 6.30109, 6.66, 7.02, 7.99, 8.4, 8.79, 9.12, 9.54),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_kwqkq"]
resource_name = "PlayerReaction"

[sub_resource type="Animation" id="Animation_i26f1"]
resource_name = "PlayerWin"

[sub_resource type="Animation" id="Animation_mhsl3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Stage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3ck0r"]
resource_name = "TrashWin"

[sub_resource type="Animation" id="Animation_fo67p"]
resource_name = "playerRap"

[sub_resource type="Animation" id="Animation_bkbxx"]
resource_name = "trashrap"

[sub_resource type="Animation" id="Animation_hp8b1"]
resource_name = "trashreaction"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ppe3v"]
_data = {
&"Intro": SubResource("Animation_ggmdm"),
&"PlayerReaction": SubResource("Animation_kwqkq"),
&"PlayerWin": SubResource("Animation_i26f1"),
&"RESET": SubResource("Animation_mhsl3"),
&"TrashWin": SubResource("Animation_3ck0r"),
&"playerRap": SubResource("Animation_fo67p"),
&"trashrap": SubResource("Animation_bkbxx"),
&"trashreaction": SubResource("Animation_hp8b1")
}

[node name="RapattleScene" groups=["RapBattle"] instance=ExtResource("1_oiwbr")]
script = ExtResource("2_jupdb")
bpm = 92.0
bars_per_turn = 2
rounds_total = 1
npc_goes_first = true
instrumental = null
npc_turn_seconds = -1.0
player_turn_seconds = 60.0
fallback_turn_seconds = 60.0

[node name="CameraLimits" type="Control" parent="." index="0"]
layout_mode = 3
anchors_preset = 0
offset_left = -278.0
offset_top = -169.0
offset_right = 2774.0
offset_bottom = 620.0
script = ExtResource("2_mjgf0")

[node name="ColorRect" parent="." index="1"]
visible = false
offset_left = -32.0
offset_top = -32.0
offset_right = 384.0
offset_bottom = 208.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="2"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

[node name="BG" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer" index="0"]
position = Vector2(161, 90)
scale = Vector2(0.209014, 0.184439)
texture = ExtResource("5_jupdb")

[node name="Rapbattletransutin-sheet" type="Sprite2D" parent="." index="3"]
position = Vector2(-30, 239)
scale = Vector2(2.35156, 2.60938)
texture = ExtResource("6_fk1ld")
hframes = 9
frame = 8

[node name="Stage" type="Sprite2D" parent="." index="4"]
position = Vector2(173.5, 89)
scale = Vector2(2.66406, 2.8125)
texture = ExtResource("7_lvyu4")
hframes = 24

[node name="Instrumental" type="AudioStreamPlayer2D" parent="." index="5"]
bus = &"Music"

[node name="Label" type="Label" parent="." index="6"]
offset_right = 40.0
offset_bottom = 23.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]
libraries = {
&"": SubResource("AnimationLibrary_ppe3v")
}

[node name="RapHUD" type="CanvasLayer" parent="." index="8"]

[node name="CountLabel" type="Label" parent="RapHUD" index="0"]
offset_left = 16.0
offset_top = 12.0
offset_right = 307.0
offset_bottom = 77.0

[node name="TurnLabel" type="Label" parent="RapHUD" index="1"]
offset_left = 12.0
offset_top = 4.0
offset_right = 310.0
offset_bottom = 83.0
metadata/_edit_use_anchors_ = true

[node name="CameraFocus" type="RemoteTransform2D" parent="." index="9"]
position = Vector2(161, 101)
remote_path = NodePath("..")

[node name="NpcSong" type="AudioStreamPlayer2D" parent="." index="10"]
stream = ExtResource("9_fk1ld")
volume_db = 10.895
